--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   url_launcher: ^6.3.1
   intl: ^0.19.0
   pin_code_fields: ^8.0.1
+  excel: ^4.0.6
+  path_provider: ^2.1.4
+  share_plus: ^10.1.4
 
 dev_dependencies:
   flutter_test:
