--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   excel: ^4.0.6
   path_provider: ^2.1.4
   share_plus: ^10.1.4
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
